2006-01-12  Nate Nielsen  <nielsen@memberwebs.com>

    * autogen.sh: Require automake 1.7 or later.
    * agent/gtk-secure-entry.c: Fix GTK warning
    
2005-11-04  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-server-source.c:
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h: Fix HKP support for sks_www
    keyserver. ie: keyserver.ubuntu.com (bug #320708)

2005-10-12  Nate Nielsen  <nielsen@memberwebs.com>

	* configure.in:
	* bonobo/Makefile.am:
	* libseahorse/Makefile.am:
	* plugins/gedit/Makefile.am:
	* plugins/nautilus-ext/Makefile.am: Fixes to build under 
	the cygwin platform. Patch from yselkowitz@users.sourceforge.net
	(bug #318590)
	* agent/Makefile.am: Be able to install in an alternat $DESTIR
	(bug #318070)
	* libseahorse/seahorse-util.c: Don't display error for cancelled.
	operations (bug #318257)
	
2005-10-06  Nate Nielsen  <nielsen@memberwebs.com>

	* configure.in: Allow any GPGME 1.x.x
	
2005-10-06  Nate Nielsen  <nielsen@memberwebs.com>

	* Version 0.8
	* AUTHORS:
	* HACKING:
	* INSTALL:
	* NEWS:
	* README:
	* README.cvs:
	* TODO: Updated for stable release
	* configure.in: Updated version to 0.8.1
	
2005-10-04  Pawan Chitrakar  <pchitrakar@gmail.com>

	* configure.in: Added ne in ALL_LINGUAS

2005-09-19  Nate Nielsen  <nielsen@memberwebs.com>

	* configure.in: Now works with gedit 2.12. Patch from 
	Mike Gardiner. (bug #316607)
	
2005-08-26  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-io.c: Fixed crasher when used
    with GPG 1.4.2 (bug# 313329)

2005-08-25  Nate Nielsen  <nielsen@memberwebs.com>
  
    * libseahorse/seahorse-gpg-options.c: Fixed crasher in 
    gpg.conf code. (bug# 314481)
    
2005-08-15  Nate Nielsen  <nielsen@memberwebs.com>

    * plugns/nautilus-ext/seahorse-nautilus.c: Fixed nautilus crasher 
    (bug #312174)

2005-08-14  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-manager.c: Updated credits