@@ -1,7 +1,9 @@
 2006-01-12  Nate Nielsen  <nielsen@memberwebs.com>
 
     * autogen.sh: Require automake 1.7 or later.
-    * agent/gtk-secure-entry.c: Fix GTK warning
+    * agent/gtk-secure-entry.c: Fix GTK warning.
+    * agent/seahorse-agent-prompt.c: Use gtk_window_present to get users
+    attention to prompt and auth windows.
     
 2005-11-04  Nate Nielsen  <nielsen@memberwebs.com>
 
